# siamesepyd

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.trunk/: trunk.yaml
docs/: index.md  modules.md
docs/SUMMARY/: index.html
docs/modules/: index.html
docs/siamesepyd/: index.html  index.md
docs/siamesepyd/api/: app.md  index.html  index.md  test.md
docs/siamesepyd/api/app/: index.html
docs/siamesepyd/api/test/: index.html
docs/siamesepyd/core/: extensions.md  hashing.md  index.html  index.md  normalize.md  resources.md  shortids.md  siamese.md
docs/siamesepyd/core/extensions/: index.html
docs/siamesepyd/core/hashing/: index.html
docs/siamesepyd/core/normalize/: index.html
docs/siamesepyd/core/resources/: index.html
docs/siamesepyd/core/shortids/: index.html
docs/siamesepyd/core/siamese/: index.html
siamesepyd/: hashing.py  shortids.py  siamese.py
siamesepyd/api/: app.py
siamesepyd/core/: extensions.py  normalize.py  resources.py  shortids.py  siamese.py  utils.py
tests/: test_foo.py
